fix flickering of transition between login and signup

--- a/app/src/Application/SignUp/styles.scss
+++ b/app/src/Application/SignUp/styles.scss
@@ -1,12 +1,16 @@
 @import '~sass/variables';
 @import '~sass/colors';
 
-.sign-up-container {
+html, body {
     background: $sign-in-background;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+.sign-up-container {
     position: fixed;
     top: 0px;
     left: 0px;
-    z-index: -1000;
     height: 100%;
     width: 100%;
     padding: 0px;
